# DeepFeatureProxyVariable

./: .gitignore  MODIFIED_DFPV_IMPLEMENTATION_PLAN.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: dfpv_mar.json  dfpv_mar_baseline.json  dfpv_mar_modified.json  dfpv_mar_modified_grid_stage1.json  dfpv_mar_modified_new.json  dfpv_mar_naive.json
scripts/: compare_dfpv_variants.py  grid_search_dfpv_mar_modified.py  inspect_mar_missing_rate.py  plot_bias_distribution.py  run_compare_dfpv_grid.py
src/: experiment.py
src/data/ate/: DGP_DEMAND.md  __init__.py  data_class_mar.py  demand_pv.py  preprocess.py
src/models/DFPV/: dr_utils.py  model_mar.py  model_mar_NEW.py  model_mar_new.py  nuisance_models.py  trainer.py  trainer_mar.py  trainer_mar_NEW.py  trainer_mar_new.py  trainer_mar_updated.py
tests/: test_dfpv_mar_vs_naive.py
