[project]
name = "deep-feature-proxy-variable"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "scipy>=1.11",
    "filelock>=3.12",
    "joblib>=1.3",
    "requests>=2.31",
    "click>=8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
