[project]
name = "deep-feature-proxy-variable"
version = "0.1.0"
requires-python = ">=3.8,<3.10"
dependencies = [
    "numpy~=1.20.1",
    "torch~=1.8.1",
    "filelock~=3.0.12",
    "scikit-learn~=0.24.1",
    "pandas~=1.2.3",
    "scipy~=1.6.1",
    "matplotlib~=3.5.3",
    "requests~=2.25.1",
    "joblib~=1.0.1",
    "click~=7.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
